# Pagina-web-de-administracion-y-Portal-publico-CEDICA

./: .gitignore  CalcuBase.py  Nuevo vol (D) - Acceso directo.lnk  README.md  admin.rar  dividir.py  et --hard commit_anterior_al_merge  resta.py  sumar.py
admin/: app.py  package-lock.json  pyproject.toml  requirements.txt
admin/migrations/: env.py
admin/migrations/versions/: 035f6b799215_.py  0c4e07822f98_.py  24daa8f039bc_.py  2890cd80a8c7_.py  2ddbaa28014b_.py  372ed53c1895_.py  9e7914fcd537_.py  a6811e3b13c5_.py  a89530ed9674_.py  bce3c478986b_initial_migration.py  c0c58ff3f028_.py  d956ea0ce68b_.py  e398518b3616_.py  f014e5fc437c_mensaje_descriptivo.py
admin/src/core/: __init__.py  bcrypt.py  config.py  database.py  models.py  seeds.py
admin/src/core/auth/: __init__.py  decorators.py  invoices.py  models.py  users.py  utiles.py
admin/src/core/board/: __init__.py  issue.py
admin/src/core/crud_JyA/: __init__.py
admin/src/core/crud_caballos/: __init__.py
admin/src/core/crud_consultas/: __init__.py
admin/src/core/crud_pagos/: __init__.py
admin/src/core/empleados/: __init__.py
admin/src/core/invoices/: invoices.py  utiles.py
admin/src/core/models/: model_JyA.py
admin/src/core/publicacion/: __init__.py
admin/src/core/reportes/: __init__.py
admin/src/web/: __init__.py  autenticacion_google.py  config.py  helpers.py  routes.py  storage.py
admin/src/web/api/: articles.py  consulta.py
admin/src/web/controllers/: caballos.py  consultas.py  crud_JyA.py  empleados.py  (+6 more)
admin/static/css/: create_user.css  invoices.css  layout.css  login.css
(+144 files in other folders)
