[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["sofiacelano <sofia.celano181928@alumnos.info.unlp.edu.ar>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.2.1"
minio = "^7.2.9"
flask-cors = "^5.0.0"
flask-marshmallow = "^1.2.1"
matplotlib = "^3.9.2"
authlib = "^1.3.2"
requests = "^2.32.3"
flask-ckeditor = {extras = ["all"], version = "^1.0.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
